--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,14 +6,14 @@ spring:
           driver-class-name: com.mysql.cj.jdbc.Driver
           url: jdbc:mysql://localhost:3306/zdyMyTest
           username: root
-          password: 123456
+          password: zdy110629
 mysql:
   iam:
     liquibaseDataSource:
       driver: com.mysql.cj.jdbc.Driver
       url: jdbc:mysql://localhost:3306/zdyMyTest?createDatabaseIfNotExist=true
       username: root
-      password: 123456
+      password: zdy110629
       maxPoolSize: 2
       connectionTimeOut: 10000
       maxLifeTime: 600000
