--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,20 @@
+#spring:
+#  datasource:
+#          driver-class-name: com.mysql.cj.jdbc.Driver
+#          url: jdbc:mysql://127.0.0.1:3306/business_operation_guidance
+#          username: root
+#          password: 123456
+#  liquibase:
+#    change-log: classpath:/db/changelog/db.changelog-master.xml
 spring:
   datasource:
+    dynamic:
+      datasource:
+        iam:
           driver-class-name: com.mysql.cj.jdbc.Driver
-          url: jdbc:mysql://127.0.0.1:3306/business_operation_guidance
+          url: jdbc:mysql://localhost:3306/business_operation_guidance
           username: root
           password: 123456
-  liquibase:
-    change-log: classpath:/db/changelog/db.changelog-master.xml
 mysql:
   iam:
     liquibaseDataSource:
