--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
           driver-class-name: com.mysql.cj.jdbc.Driver
-          url: jdbc:mysql://127.0.0.1:3306/business_operation_guidance
+          url: jdbc:mysql://127.0.0.1:3306/Wustzdy_sql
           username: root
-          password: 123456
+          password: zdy110629
   liquibase:
     change-log: classpath:/db/changelog/db.changelog-master.xml
     enabled: false
@@ -11,9 +11,9 @@ mysql:
   iam:
     liquibaseDataSource:
       driver: com.mysql.cj.jdbc.Driver
-      url: jdbc:mysql://localhost:3306/Wustzdy?createDatabaseIfNotExist=true
+      url: jdbc:mysql://localhost:3306/Wustzdy_sql?createDatabaseIfNotExist=true
       username: root
-      password: 123456
+      password: zdy110629
       maxPoolSize: 2
       connectionTimeOut: 10000
       maxLifeTime: 600000
